Fix Open Example menu bugs (#24, #25, #26, #28)
- Use null-safe JsonNode.path() for catalog fields; skip malformed
  entries with a log warning instead of throwing NPE
- Catch Exception (not just IOException) in openExample so
  IllegalArgumentException from fromJson is handled
- Catch Exception in buildExamplesMenu and log the error with SLF4J
  instead of silently swallowing it
- Standardize on getFirst() in openFile to match openExample